--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.11.0",
     "lucide-react": "^0.447.0",
