--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-slider": "^1.2.1",
+    "@radix-ui/react-switch": "^1.1.1",
     "classnames": "^2.5.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.11.0",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "reactflow": "^11.11.4",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "^20",
