--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^11.11.0",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
+    "punycode": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
     "reactflow": "^11.11.4",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/punycode": "^2.1.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
